--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Checklist Detalhado</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://p.trellocdn.com/power-up.min.js"></script>
 </head>
@@ -11,10 +10,9 @@
     
     <div id="checklist-container"></div>
 
-    <div class="add-form">
-      <input type="text" id="new-item-title" placeholder="Título da Tarefa (ex: Gerar Boleto)">
-      <textarea id="new-item-desc" placeholder="Descrição técnica ou observações..."></textarea>
-      <button id="btn-add" class="trello-btn">Adicionar Item</button>
+    <div class="add-section">
+      <input type="text" id="new-item-input" placeholder="Adicionar novo item..." autocomplete="off">
+      <button id="btn-add" class="btn-primary">Adicionar</button>
     </div>
 
   </div>
