Atualização de funcionalidade

--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
 <body>
   <div id="content">
     
-    <div class="header-section">
-      <input type="text" id="checklist-title" placeholder="Dê um título para esta Checklist..." autocomplete="off">
-    </div>
+    <div id="lists-container"></div>
 
-    <div id="checklist-container"></div>
-
-    <div class="add-section">
-      <input type="text" id="new-item-input" placeholder="Adicionar novo item..." autocomplete="off">
-      <button id="btn-add" class="btn-icon" title="Adicionar">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <line x1="12" y1="5" x2="12" y2="19"></line>
-          <line x1="5" y1="12" x2="19" y2="12"></line>
-        </svg>
-      </button>
-    </div>
+    <button id="btn-new-list" class="btn-create-list">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <line x1="12" y1="5" x2="12" y2="19"></line>
+        <line x1="5" y1="12" x2="19" y2="12"></line>
+      </svg>
+      Criar Nova Checklist
+    </button>
 
   </div>
 
