--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css?v=2.1">
+  <link rel="stylesheet" href="style.css?v=2.2">
   <script src="https://p.trellocdn.com/power-up.min.js"></script>
 </head>
 <body>
   <div id="content">
     
-    <div style="font-size: 10px; color: #aaa; text-align: right; margin-bottom: 5px;">
-      Versão 2.1 (Com Ícone de Nota)
+    <div style="font-size: 10px; color: #5e6c84; text-align: right; margin-bottom: 5px; opacity: 0.5;">
+      v2.2 (Dark Note + Animation)
     </div>
 
     <div id="lists-container"></div>
@@ -24,17 +24,16 @@
     </button>
     
     <div style="margin-top: 20px; text-align: center;">
-        <button id="btn-clear-data" style="background:none; border:none; color:#ff0000; font-size:10px; cursor:pointer; opacity:0.3;">[Resetar Tudo]</button>
+        <button id="btn-clear-data" style="background:none; border:none; color:#ff0000; font-size:10px; cursor:pointer; opacity:0.2;">[Resetar Tudo]</button>
     </div>
 
   </div>
 
-  <script src="client.js?v=2.1"></script>
+  <script src="client.js?v=2.2"></script>
   <script>
     document.getElementById('btn-clear-data').addEventListener('click', function(){
-        if(confirm('Cuidado: Isso apaga tudo. Confirmar?')){
-            var t = TrelloPowerUp.iframe();
-            t.set('card', 'shared', 'multiChecklists', []).then(function(){ location.reload(); });
+        if(confirm('Resetar dados?')){
+            TrelloPowerUp.iframe().set('card', 'shared', 'multiChecklists', []).then(function(){ location.reload(); });
         }
     });
   </script>
